# Platform-Based-on-Knowledge-Graphs-and-RAG

./: README.md
asr-rag-core/examples/: graph_visual_with_html.py  graph_visual_with_neo4j.py  knowledge_graph.html  only_answer.py
gai-kgc-lite/: .gitignore  README.md  analyze_graph.py  gai_kgc_workflow_demo.ipynb  generate_demo_report.py  import_to_neo4j.py  pdf2md.py  pyproject.toml  社区发现.ipynb
gai-kgc-lite/output/: all_entities.json  all_triples.json  docs_summary.json  entity_tags_bydoc.json  full_entity_schema.json  gai_kgc_public_demo_report.md
gai-kgc-lite/utils/: logger.py  vector_db.py
industrial-knowledge-service-platform/: .env.example  .gitignore  README.md
industrial-knowledge-service-platform/files/industrial_demo/: asr_rag_method.md  gai_kgc_method.md  industrial_platform_overview.md
industrial-knowledge-service-platform/frontend/: app.py
industrial-knowledge-service-platform/frontend/components/: chat.py  sidebar.py
industrial-knowledge-service-platform/server/: main.py
industrial-knowledge-service-platform/test/: README.md  search_with_stream.py  search_without_stream.py  test_deep_agent.py
